# saro-platform

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  RAILWAY_SETUP.md  README.md  auth.py  data_gen_mit.py  database.py  deploy.sh  docker-compose.yml  engine.py  import_mit_risks.py  main.py  models.py  railway.toml  render.yaml  requirements.txt  schemas.py  seed_demo.py  test_data_mit_200.json
.claude/: settings.local.json
.railway/: config.json
api/: access_routes.py  domain_routes.py  persona_routes.py
backend/: .dockerignore  Dockerfile  alembic.ini  fly.toml  main.py  nixpacks.toml  railway.toml  requirements.txt
docs/: v8_db_setup.md
frontend/: Dockerfile  app.py  (+9 more)
saro-data-framework/: config.yaml  pyproject.toml
saro-data-framework/output/: pii_masking_batch.json  real_toxicity_prompts_batch.json  run_report.json  truthfulqa_batch.json
saro-data-framework/src/saro_data/: __init__.py  cli.py  runner.py  schema.py  uploader.py  validator.py
saro-data-framework/src/saro_data/converters/: __init__.py  base.py  crows_pairs.py  guardrails_hallucination.py  mimic3.py  pii_masking.py  real_toxicity_prompts.py  truthfulqa.py
saro-data-framework/src/saro_data_framework/: __init__.py  cli.py  schema.py  uploader.py
saro-data-framework/src/saro_data_framework/converters/: __init__.py  base.py  crows_pairs.py  guardrails_hallucination.py  mimic3.py  pii_masking.py  real_toxicity_prompts.py  truthfulqa.py
saro-data-framework/tests/: conftest.py  test_converters.py  test_runner.py  test_schema.py  test_validator.py
(+136 files in other folders)
